--- a/app/views/trips/to_destination.html.erb
+++ b/app/views/trips/to_destination.html.erb
@@ -18,7 +18,7 @@
         <div class="col s12">
           <div class="card">
             <div class="card-image">
-              <img src="images/sample-1.jpg">
+              <%= image_tag t.picture.url %>
               <span class="card-title"><%= t.description %></span>
             </div>
             <div class="card-content">
