--- a/app/assets/stylesheets/trips.scss
+++ b/app/assets/stylesheets/trips.scss
@@ -17,7 +17,9 @@ h3 {
 	color: #5F9EA0;
 	font-family: 'Comfortaa', cursive;
 }
-
+.card {
+  
+}
 /* ============================================================
   SECTIONS
 ============================================================ */
