--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -7,10 +7,12 @@
   <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
     <script type="text/javascript">
   $(document).ready(function() {
+    $('.modal-trigger').leanModal();
     $('.datepicker').pickadate({
     selectMonths: true, // Creates a dropdown to control month
     selectYears: 15 // Creates a dropdown of 15 years to control year
   });
+
   });
   </script>
 
@@ -149,32 +151,5 @@ section.module.parallax-3 {
   </div>
 </section>
 
-
-
-
-
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
