fixed navbar height on places show

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -15,11 +15,12 @@
     height:400px;
   }
   nav{
-  margin-top: -32px;
-  padding:10px 0px;
-  position: fixed;
-  background-color: #5F9EA0;
-  z-index: 99;
+    height:80px;
+    margin-top: -32px;
+    padding:10px 0px;
+    position: fixed;
+    background-color: #5F9EA0;
+    z-index: 99;
   }
   .container{
     padding: 50px;
