--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -103,6 +103,9 @@
         text-decoration: none;
         color: white;
       }
+      a:hover {
+        text-decoration: none;
+      }
       .favorites{
         height:100px;
         width: 200px;
@@ -114,11 +117,6 @@
       #wrapIt{
         margin-top: 64px;
       }
-
-
-
-
-
   </style>
 
 </head>
